[UploadActivity]Support multi select on Tree Mode
Signed-off-by: Ethan Shan <shan0xiao0xi@gmail.com>